# avc-test-py-mcp

./: .gitignore  LICENSE  MANIFEST.in  PUBLISH.md  PUBLISH_UV.md  README.md  TESTING_GUIDE.md  pyproject.toml  test_manual.py  这是一个测试的文件.txt
.github/workflows/: deploy.yml  test.yml
src/http_mcp_client/: __init__.py  server.py
tests/: test_import.py  test_server.py
