[project]
name = "avc-test-py-mcp"
version = "0.1.2"
description = "HTTP MCP Client-Server for video enhancement API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["mcp", "video", "enhancement", "http", "client", "server", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
avc-test-py-mcp = "http_mcp_client.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/avc-test-py-mcp"
Repository = "https://github.com/yourusername/avc-test-py-mcp"
Issues = "https://github.com/yourusername/avc-test-py-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/http_mcp_client"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
